# sensorserver

./: .env.app  .env.app.dev  .env.app.example  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  justfile
app/: .env.app  Dockerfile  Dockerfile.dev  README.md  mock_device.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/app/: hypercorn_conf.py
app/app/api/: server.py
app/app/api/dependencies/: auth.py  database.py  db.py  files.py
app/app/api/routes/: __init__.py  devices.py  measurements.py  pages.py  users.py
app/app/api/routes/htmx/: __init__.py  allow_devices.py  current.py  devices.py  graphs.py
app/app/core/: auth.py  config.py
app/app/db/: __init__.py  crud.py  database.py  tasks.py
app/app/db/migrations/: env.py  script.py.mako
app/app/db/migrations/versions/: 46721e183d12_add_measurements_table.py  add9062a043c_baseline.py  ddf3206cc2f8_add_users_table.py  e499c7b8b338_add_fastapi_users.py  fa04890b0a88_users_table_and_device_tables.py  fc6e8d9402f2_baseline.py
app/app/db/repositories/: device_allow.py  device_auth.py  device_block.py  device_request.py  measurement.py  users.py
app/app/db/tables/: __init__.py  device_allow.py  device_auth.py  device_block.py  device_request.py  measurements.py  users.py
app/app/dependencies/: db.py
app/app/management/: device.py  user.py
app/app/models/: core.py  device_allow.py  device_auth.py  device_block.py  device_request.py  measurements.py  token.py  user.py
app/app/services/: __init__.py  authentication.py
app/app/services/device/: authentication.py
app/app/static/css/: base.css  graphs.css
app/app/static/images/statics/: about.txt
app/app/static/js/statics/: base.js
app/app/templates/: base.html  choices.html  current-choices.html  current.html  devices.html  graphs.html  image.html  login-element.html  nav.html  reading.html  requests-buttons.html  requests.html
app/integration_tests/: factories.py  fixtures.py  test_measurements.py  test_pydantic.py  test_users.py
app/tests/integration/: fixtures.py  test_measurements.py  test_users.py
caddy/: Caddyfile  Caddyfile.dev  instructions.md
caddy/pages/: allow_devices.html  index.html
caddy/srv/: allow_devices.html  index.html  signup.html
traefik/: traefik.toml  traefik_dynamic.toml
